Try #3 to fix black bars on iphone

--- a/src/modules/scanner/scanner.component.scss
+++ b/src/modules/scanner/scanner.component.scss
@@ -33,6 +33,10 @@
     display: flex;
     background: black;
     position: relative;
+
+    video {
+        object-fit: cover;
+    }
 }
 
 @media only screen and (min-width: 375px) {
